# Simulateur-Arm

./: .gitignore  README.md
arm_simulator-1.4/: arm_branch_other.c  arm_core.c  arm_core.h  arm_data_processing.c  arm_data_processing.h  arm_exception.c  arm_instruction.c  arm_instruction.h  arm_load_store.c  arm_load_store.h  memory.c  registers.c  registers.h
arm_simulator-1.4/Examples/: MSR.s  Makefile.am  SWP.s  exampleH_trace.txt  test_branch.s  test_data_processing.s  test_halfword_transfer.s  test_multiply.s  test_single_swap.s
